Project upgrade
- upgrade to Java 21;
- upgrade to spring-boot 3.4.0;
- upgrade to springdoc-openapi 2.7.0;
- upgrade to mapstruct 1.6.3;
- upgrade to postgres docker image 17.2;
- upgrade wrapperVersion to 3.3.2 and apache-maven to 3.9.9;
- refactor docker-compose.yml and pom.xml files;
- update README.